# oop_lab6

./: CMakeLists.txt  README.MD  battle_log.txt  game_state.txt  main  main.cpp
include/: druid.hpp  factory.hpp  game.hpp  npc.hpp  observer.hpp  orc.hpp  trader.hpp  visitor.hpp
src/: druid.cpp  factory.cpp  game.cpp  npc.cpp  observer.cpp  orc.cpp  trader.cpp  visitor.cpp
tests/: test.cpp
